--- a/index.html
+++ b/index.html
@@ -7,9 +7,39 @@
     <title>Drawer App</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <div id="app"></div>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="bg-slate-100">
+    <main class="mx-auto max-w-5xl py-8 px-4 overflow-x-auto">
+      <div class="text-center mb-4 sticky top-0 left-0 z-10 bg-slate-100 pb-4">
+        <div id="controls" class="mb-2">
+          <label for="fileSelect" class="block text-lg font-medium mb-2"
+            >Choose a drawing:</label
+          >
+          <select
+            id="fileSelect"
+            class="px-4 py-2 border border-slate-300 rounded-md bg-white"
+          >
+            <option value="naruto">Naruto</option>
+            <option value="tulips">Tulips</option>
+          </select>
+          <button
+            id="startButton"
+            class="ml-2 px-6 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
+          >
+            Start Drawing
+          </button>
+        </div>
+        <div id="status" class="text-xl font-semibold text-center hidden">
+          Drawing in progress...
+        </div>
+      </div>
+      <canvas
+        id="canvas"
+        width="512"
+        height="512"
+        class="border border-slate-400 my-4 mx-auto bg-white"
+      ></canvas>
+    </main>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
