docs: update metadata and readme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,54 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image Drawer</title>
+    <title>Image Drawer - Animated Drawing Experience</title>
+    <meta
+      name="description"
+      content="Watch beautiful images come to life with smooth line animations. Choose from various drawings and enjoy the mesmerizing process of automated drawing."
+    />
+    <meta
+      name="keywords"
+      content="drawing, animation, svg, canvas, art, automated drawing, line art, interactive art"
+    />
+    <meta name="author" content="Hendra Agil" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#3B82F6" />
+
+    <link rel="canonical" href="https://drawer.hndr.xyz/" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Image Drawer - Animated Drawing Experience"
+    />
+    <meta
+      name="twitter:description"
+      content="Watch beautiful images come to life with smooth line animations. Choose from various drawings and enjoy the mesmerizing process of automated drawing."
+    />
+    <meta name="twitter:creator" content="@hendraaagil" />
+    <meta
+      name="twitter:image"
+      content="https://drawer.hndr.xyz/open-graph.png"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Image Drawer - Animated Drawing Experience"
+    />
+    <meta
+      property="og:description"
+      content="Watch beautiful images come to life with smooth line animations. Choose from various drawings and enjoy the mesmerizing process of automated drawing."
+    />
+    <meta property="og:url" content="https://drawer.hndr.xyz/" />
+    <meta property="og:site_name" content="Image Drawer" />
+    <meta
+      property="og:image"
+      content="https://drawer.hndr.xyz/open-graph.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body>
